<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/project_name" android:layout_margin="5px" 
		android:textSize="10pt"/>
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:text="@string/project_update_label" android:layout_margin="10px" 
		android:textSize="8pt"/>

	<EditText android:id="@+id/body" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	
	<Button android:id="@+id/button_share" 
	  android:text="@string/button_share"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

</LinearLayout>